--- a/Assessment One/Task One/Index.html
+++ b/Assessment One/Task One/Index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assessment One Task 1 (Table/Laptop Layout)</title>
-    <link rel="stylesheet" type="text/css" href="LaptopLayout.css">
+    <title>Task 1 (Different Layout)</title><!--Giving the webpage a title-->
+    <link rel="stylesheet" type="text/css" href="LaptopLayout.css"><!--linking an external CSS file for styling-->
 </head>
 
 <body>
 
-    <header>
+    <header> <!--making a top header section for the website-->
         <div class="logo">
-            <img src="logo.svg" alt="Logo">
+            <img src="logo.svg" alt="Logo"> <!--logo image-->
         </div>
     </header>
 
-    <main>
-        <div class="row">
-            <div class="picture">
+    <main> <!--having the main content tag to make it more organized with its contents-->
+        <div class="row"> <!--declaring the class funtion and dividing into rows-->
+            <div class="picture"><!--giving each pictive a div tag to make it easier to adjust in the css-->
                 <img src="cover-1.jpg" alt="Image 1">
             </div>
             <div class="picture">
@@ -40,7 +40,7 @@
         </div>
     </main>
 
-    <div class="bodytext">
+    <div class="bodytext"><!--body text section with Lorem Ipsum placeholder text-->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat vero architecto quisquam, pariatur a? Rem
         maxime reiciendis repellat veniam quasi? Repudiandae dolorem ut iste qui. Pariatur maxime voluptate, maiores
         possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur perspiciatis velit, deserunt iure
@@ -51,7 +51,7 @@
         reiciendis quibusdam.
     </div>
 
-    <footer>
+    <footer><!--footer section with copyright information-->
         <p>Copyright © 2021 Erased Disks Ltd.</p>
     </footer>
 
