--- a/Assessment One/Task Three/index.html
+++ b/Assessment One/Task Three/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Third Task</title>
-    <link rel="stylesheet" href="Task3.css">
+    <link rel="stylesheet" href="Task3.css"><!--stylesheet link sass-->
 </head>
 
-<body>
+<body><!--giving 3 diffrent div class for images, stripes, and circles-->
     <div class="images">
         <div class="img1"></div>
         <div class="img2"></div>
         <div class="img3"></div>
     </div>
 
-    <div class="stripes">
+    <div class="stripes"><!--this will have control for the stripes design in the website-->
         <div class="s1"></div>
         <div class="s2"></div>
         <div class="s3"></div>
         <div class="s4"></div>
     </div>
 
-    <div class="circles">
+    <div class="circles"><!--to make it easier to give different sizes for the circles-->
         <div class="c1"></div>
         <div class="c2"></div>
         <div class="c3"></div>
